--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://nohahassan64.github.io/react-pizza/",
   "name": "my-app-pizza",
   "version": "0.1.0",
   "private": true,
